docker-configs/k8s/prod/fwdays-namespace.yaml
{
  "kind": "Namespace",
  "apiVersion": "v1",
  "metadata": {
    "name": "fwdays-prod",
    "labels": {
      "name": "fwdays-prod"
    }
  }
}
