docker-configs/k8s/prod/backend-service-bind.yaml
kind: Service
apiVersion: v1
metadata:
  name: fwdays-prod-backend
  namespace: default
spec:
  type: ExternalName
  externalName: fwdays-backend.fwdays-prod.svc.cluster.local
  ports:
  - port: 80
