docker-configs/k8s/prod/fwdays-sessions.yaml
apiVersion: v1
kind: Service
metadata:
  name: fwdays-sessions
  namespace: fwdays-prod
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: fwdays-sessions
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fwdays-sessions
  namespace: fwdays-prod
spec:
  selector:
    matchLabels:
      app: fwdays-sessions
  replicas: 1
  template:
    metadata:
      labels:
        app: fwdays-sessions
    spec:
      containers:
      - name: fwdays-sessions
        image: redis:5.0.4
        ports:
        - containerPort: 6379
        livenessProbe:
          tcpSocket:
            port: 6379
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          tcpSocket:
            port: 6379
          initialDelaySeconds: 5
          periodSeconds: 10
