docker-configs/k8s/prod/fwdays-smtp.yaml
apiVersion: v1
kind: Service
metadata:
  name: fwdays-smtp
  namespace: fwdays-prod
  labels:
    app: fwdays-smtp
spec:
  ports:
  - name: smtp
    protocol: TCP
    port: 25
    targetPort: 25
  selector:
    app: fwdays-smtp
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: fwdays-smtp
  namespace: fwdays-prod
  labels:
    app: fwdays-smtp
spec:
  selector:
    matchLabels:
      app: fwdays-smtp
  template:
    metadata:
      labels:
        app: fwdays-smtp
    spec:
      containers:
      - name: fwdays-smtp
        image: gitlab.stfalcon.com:4567/stfalcon/fwdays/postfix:v3
        livenessProbe:
          tcpSocket:
            port: 25
          initialDelaySeconds: 15
          periodSeconds: 60
        ports:
        - containerPort: 25
          name: smtp
        name: fwdays-smtp
      imagePullSecrets:
      - name: regcred
