docker-configs/k8s/prod/phpmyadmin-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: fwdays-prod
  labels:
    app: phpmyadmin
spec:
  ports:
    - port: 80
  selector:
    app: phpmyadmin
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: phpmyadmin
  namespace: fwdays-prod
  labels:
    app: phpmyadmin
spec:
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - name: phpmyadmin
        image: phpmyadmin/phpmyadmin
        ports:
        - containerPort: 80
        name: phpmyadmin
